recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:4: error: illegal start of simple expression
  else :
       ^